--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -32,6 +32,12 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns" class="loans__row"></tr>
       </table>
+      <mat-paginator
+        [length]="totalCount"
+        [pageSize]="pageSize"
+        [pageSizeOptions]="[5, 10, 20]"
+        (page)="onPageChange($event)">
+      </mat-paginator>
     </div>
   </section>
 </main>
